--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -107,10 +107,7 @@ jobs:
           # Authentication token for Qodana Cloud integration
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
-          # Adjust Qodana timeout (milliseconds). Default is -1 (no limit).
-          args: >
-            --timeout=300000
-
+          args: --project-dir=backend --timeout=300000
           post-pr-comment: true        # Adds summary of results as PR comment
           use-annotations: true        # Adds inline annotations in PR diffs
           upload-result: true          # Uploads full results to Qodana Cloud
