--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Ultra-Ultra-Fast Java CI (All-in-One)
+name: Ultra-Ultra-Fast Java CI (Hybrid Parallel)
 
 on:
   push:
@@ -7,30 +7,27 @@ on:
     branches: [ "main", "develop", "master" ]
 
 jobs:
-  all_in_one:
+  # -------------------------------------------------------------------
+  # Job 1: Common setup (checkout + Java + Gradle cache)
+  # -------------------------------------------------------------------
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      cache-key: ${{ steps.gradle-cache-key.outputs.cache-key }}
     steps:
-      # -------------------------------------------------------------------
-      # Step 1: Checkout repository
-      # -------------------------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for Gradle & GitLeaks
+          fetch-depth: 0
 
-      # -------------------------------------------------------------------
-      # Step 2: Setup Java 21
-      # -------------------------------------------------------------------
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      # -------------------------------------------------------------------
-      # Step 3: Cache Gradle dependencies
-      # -------------------------------------------------------------------
       - name: Cache Gradle packages
+        id: gradle-cache-key
         uses: actions/cache@v4
         with:
           path: |
@@ -40,19 +37,39 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # -------------------------------------------------------------------
-      # Step 4: Run Gradle tasks (build + lint + tests + coverage)
-      # -------------------------------------------------------------------
+  # -------------------------------------------------------------------
+  # Job 2: Build and test with Gradle
+  # -------------------------------------------------------------------
+  build_and_test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Restore Gradle cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ needs.setup.outputs.cache-key }}
+
       - name: Gradle Build, Lint, Test, Coverage
         env:
-          SPRING_PROFILES_ACTIVE: ci  # Use CI profile with H2 in-memory database
+          SPRING_PROFILES_ACTIVE: ci
         run: |
           cd backend
           ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
 
-      # -------------------------------------------------------------------
-      # Step 5: Upload test reports
-      # -------------------------------------------------------------------
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
@@ -60,9 +77,6 @@ jobs:
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
-      # -------------------------------------------------------------------
-      # Step 6: Upload JaCoCo coverage reports
-      # -------------------------------------------------------------------
       - name: Upload JaCoCo coverage
         uses: actions/upload-artifact@v4
         with:
@@ -70,9 +84,6 @@ jobs:
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
-      # -------------------------------------------------------------------
-      # Step 7: Upload coverage to Codecov
-      # -------------------------------------------------------------------
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -80,42 +91,50 @@ jobs:
           flags: unittests
           name: codecov-news-platform
 
-      # -------------------------------------------------------------------
-      # Step 8: Run GitLeaks for secrets detection
-      # -------------------------------------------------------------------
+  # -------------------------------------------------------------------
+  # Job 3: Security (GitLeaks)
+  # -------------------------------------------------------------------
+  security:
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Run GitLeaks scan
         run: |
           curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
           ./gitleaks detect --source . --verbose --redact
 
-      # -------------------------------------------------------------------
-      # Step 9: Upload GitLeaks report if scan fails
-      # -------------------------------------------------------------------
-      - name: Upload GitLeaks results (if failed)
+      - name: Upload GitLeaks results
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-results
           path: .gitleaks-report.json
 
-      # -------------------------------------------------------------------
-      # Step 10: Run Qodana static analysis (Spring Boot/JVM project)
-      # -------------------------------------------------------------------
+  # -------------------------------------------------------------------
+  # Job 4: Qodana (runs in parallel with security after build/test)
+  # -------------------------------------------------------------------
+  qodana:
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
-        env:
-          # Qodana Cloud authentication token (not required if upload-result is false)
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
         with:
           args: --project-dir=backend --timeout=300000
-          post-pr-comment: true        # Adds summary as a PR comment
-          use-annotations: true        # Adds inline annotations in the PR diff
-          upload-result: false         # Do not upload results to Qodana Cloud
+          post-pr-comment: true
+          use-annotations: true
+          upload-result: false   # disable upload to Qodana Cloud (local artifact instead)
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
 
-      # -------------------------------------------------------------------
-      # Step 10.1: Upload Qodana HTML/JSON report as GitHub artifact
-      # This ensures that report.zip is always available, even if cloud upload is disabled
-      # -------------------------------------------------------------------
       - name: Upload Qodana report artifact
         uses: actions/upload-artifact@v4
         with:
@@ -123,10 +142,7 @@ jobs:
           path: qodana/
           if-no-files-found: warn
 
-      # -------------------------------------------------------------------
-      # Step 11: Upload Qodana SARIF report to GitHub Security (Code Scanning)
-      # -------------------------------------------------------------------
-      - name: Upload Qodana report to GitHub code scanning
+      - name: Upload Qodana SARIF report to GitHub security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: qodana/results/qodana.sarif.json
