--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Ultra-Ultra-Fast Java CI (Hybrid Parallel)
+name: Optimized Hybrid Java CI with Gradle, GitLeaks and Qodana
 
 on:
   push:
@@ -6,28 +6,31 @@ on:
   pull_request:
     branches: [ "main", "develop", "master" ]
 
+# ===================================================================
+# JOB 1: Setup environment and cache Gradle dependencies
+# ===================================================================
 jobs:
-  # -------------------------------------------------------------------
-  # Job 1: Common setup (checkout + Java + Gradle cache)
-  # -------------------------------------------------------------------
   setup:
     runs-on: ubuntu-latest
     outputs:
-      cache-key: ${{ steps.gradle-cache-key.outputs.cache-key }}
+      gradle-cache-key: ${{ steps.cache.outputs.cache-hit }}
     steps:
+      # Checkout repository once for all downstream jobs
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # Setup Java 21
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
+      # Cache Gradle dependencies
       - name: Cache Gradle packages
-        id: gradle-cache-key
+        id: cache
         uses: actions/cache@v4
         with:
           path: |
@@ -37,39 +40,34 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-  # -------------------------------------------------------------------
-  # Job 2: Build and test with Gradle
-  # -------------------------------------------------------------------
-  build_and_test:
+      # Upload backend sources for downstream jobs
+      - name: Upload backend sources artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-sources
+          path: backend
+
+  # ===================================================================
+  # JOB 2: Gradle build + Lint + Tests + Coverage
+  # ===================================================================
+  gradle_build_test:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Download backend sources
+      - name: Download backend sources
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
+          name: backend-sources
+          path: backend
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Restore Gradle cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ needs.setup.outputs.cache-key }}
-
-      - name: Gradle Build, Lint, Test, Coverage
+      # Run all Gradle tasks in one step
+      - name: Build, Lint, Test, Coverage
         env:
           SPRING_PROFILES_ACTIVE: ci
-        run: |
-          cd backend
-          ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
+        run: cd backend && ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
 
+      # Upload test reports
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
@@ -77,6 +75,7 @@ jobs:
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
+      # Upload JaCoCo coverage
       - name: Upload JaCoCo coverage
         uses: actions/upload-artifact@v4
         with:
@@ -84,6 +83,7 @@ jobs:
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
+      # Upload coverage to Codecov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -91,50 +91,60 @@ jobs:
           flags: unittests
           name: codecov-news-platform
 
-  # -------------------------------------------------------------------
-  # Job 3: Security (GitLeaks)
-  # -------------------------------------------------------------------
+  # ===================================================================
+  # JOB 3: Security scan with GitLeaks (parallel)
+  # ===================================================================
   security:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: gradle_build_test
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Download backend sources
+      - name: Download backend sources
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-sources
+          path: backend
 
+      # Run GitLeaks scan
       - name: Run GitLeaks scan
         run: |
           curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
           ./gitleaks detect --source . --verbose --redact
 
-      - name: Upload GitLeaks results
+      # Upload GitLeaks report if scan fails
+      - name: Upload GitLeaks results (if failed)
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-results
           path: .gitleaks-report.json
 
-  # -------------------------------------------------------------------
-  # Job 4: Qodana (runs in parallel with security after build/test)
-  # -------------------------------------------------------------------
+  # ===================================================================
+  # JOB 4: Qodana static analysis (parallel)
+  # ===================================================================
   qodana:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: gradle_build_test
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Download backend sources
+      - name: Download backend sources
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
+          name: backend-sources
+          path: backend
 
+      # Run Qodana scan (local artifact, no cloud upload)
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         with:
           args: --project-dir=backend --timeout=300000
           post-pr-comment: true
           use-annotations: true
-          upload-result: false   # disable upload to Qodana Cloud (local artifact instead)
+          upload-result: false
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
 
+      # Upload Qodana report as artifact
       - name: Upload Qodana report artifact
         uses: actions/upload-artifact@v4
         with:
@@ -142,6 +152,7 @@ jobs:
           path: qodana/
           if-no-files-found: warn
 
+      # Upload Qodana SARIF report to GitHub Security
       - name: Upload Qodana SARIF report to GitHub security
         uses: github/codeql-action/upload-sarif@v3
         with:
