--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -6,31 +6,28 @@ on:
   pull_request:
     branches: [ "main", "develop", "master" ]
 
-# ===================================================================
-# JOB 1: Setup environment and cache Gradle dependencies
-# ===================================================================
 jobs:
+  # ===================================================================
+  # JOB 1: Setup (checkout + Java + Gradle cache + source upload)
+  # ===================================================================
   setup:
     runs-on: ubuntu-latest
-    outputs:
-      gradle-cache-key: ${{ steps.cache.outputs.cache-hit }}
     steps:
-      # Checkout repository once for all downstream jobs
+      # Checkout full repository (full history needed for GitLeaks and Qodana)
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # Setup Java 21
+      # Setup Java 21 for all downstream jobs
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      # Cache Gradle dependencies
+      # Cache Gradle dependencies for faster builds
       - name: Cache Gradle packages
-        id: cache
         uses: actions/cache@v4
         with:
           path: |
@@ -48,26 +45,41 @@ jobs:
           path: backend
 
   # ===================================================================
-  # JOB 2: Gradle build + Lint + Tests + Coverage
+  # JOB 2: Gradle build, lint, tests, coverage (core pipeline)
   # ===================================================================
-  gradle_build_test:
+  build_and_test:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      # Download backend sources
+      # Download backend sources uploaded by setup job
       - name: Download backend sources
         uses: actions/download-artifact@v4
         with:
           name: backend-sources
           path: backend
 
-      # Run all Gradle tasks in one step
+      # Restore execute permission for Gradle wrapper (lost during artifact packaging)
+      - name: Grant execute permission for Gradle wrapper
+        run: chmod +x backend/gradlew
+
+      # Cache Gradle again for this job
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      # Run build + lint + tests + coverage
       - name: Build, Lint, Test, Coverage
         env:
           SPRING_PROFILES_ACTIVE: ci
         run: cd backend && ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
 
-      # Upload test reports
+      # Upload test reports (JUnit results)
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
@@ -75,7 +87,7 @@ jobs:
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
-      # Upload JaCoCo coverage
+      # Upload JaCoCo coverage results
       - name: Upload JaCoCo coverage
         uses: actions/upload-artifact@v4
         with:
@@ -83,7 +95,7 @@ jobs:
           path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
-      # Upload coverage to Codecov
+      # Upload coverage data to Codecov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -92,13 +104,12 @@ jobs:
           name: codecov-news-platform
 
   # ===================================================================
-  # JOB 3: Security scan with GitLeaks (parallel)
+  # JOB 3: Security scan with GitLeaks (runs in parallel after build)
   # ===================================================================
   security:
     runs-on: ubuntu-latest
-    needs: gradle_build_test
+    needs: build_and_test
     steps:
-      # Download backend sources
       - name: Download backend sources
         uses: actions/download-artifact@v4
         with:
@@ -120,31 +131,30 @@ jobs:
           path: .gitleaks-report.json
 
   # ===================================================================
-  # JOB 4: Qodana static analysis (parallel)
+  # JOB 4: Qodana static analysis (runs in parallel after build)
   # ===================================================================
   qodana:
     runs-on: ubuntu-latest
-    needs: gradle_build_test
+    needs: build_and_test
     steps:
-      # Download backend sources
       - name: Download backend sources
         uses: actions/download-artifact@v4
         with:
           name: backend-sources
           path: backend
 
-      # Run Qodana scan (local artifact, no cloud upload)
+      # Run Qodana scan (analyzing backend project)
       - name: Run Qodana Scan (JVM)
         uses: JetBrains/qodana-action@v2025.1
         with:
           args: --project-dir=backend --timeout=300000
-          post-pr-comment: true
-          use-annotations: true
-          upload-result: false
+          post-pr-comment: true       # comment summary to PR
+          use-annotations: true       # inline annotations in PR diff
+          upload-result: false        # do not push to Qodana Cloud (store artifact locally instead)
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }}
 
-      # Upload Qodana report as artifact
+      # Upload complete Qodana report (HTML + JSON) as GitHub artifact
       - name: Upload Qodana report artifact
         uses: actions/upload-artifact@v4
         with:
@@ -152,8 +162,8 @@ jobs:
           path: qodana/
           if-no-files-found: warn
 
-      # Upload Qodana SARIF report to GitHub Security
-      - name: Upload Qodana SARIF report to GitHub security
+      # Upload SARIF results to GitHub Security dashboard
+      - name: Upload Qodana SARIF report to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: qodana/results/qodana.sarif.json
