--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -103,6 +103,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_test
     steps:
+      - name: Checkout repository  # <-- ADD THIS STEP
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Download backend sources
         uses: actions/download-artifact@v4
         with:
