--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Optimized Hybrid Java CI with Gradle, GitLeaks and Qodana
+name: Optimized Hybrid Java CI with Gradle, GitLeaks, SpotBugs and PMD
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # fetch full history (needed for GitLeaks and Qodana)
+          fetch-depth: 0   # fetch full history (needed for GitLeaks)
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -42,7 +42,7 @@ jobs:
           retention-days: 1    # keep minimal, full repo available in git
 
   # ===================================================================
-  # JOB 2: Gradle build, lint, tests, coverage
+  # JOB 2: Gradle build, lint, tests, coverage, static analysis
   # ===================================================================
   build_and_test:
     runs-on: ubuntu-latest
@@ -71,6 +71,9 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: ci
         run: cd backend && ./gradlew build checkstyleMain checkstyleTest test jacocoTestReport --no-daemon --warning-mode all
+
+      - name: Static Analysis (SpotBugs + PMD)
+        run: cd backend && ./gradlew spotbugsMain spotbugsTest pmdMain pmdTest --no-daemon --warning-mode all
 
       - name: Upload test reports
         if: always()   # ✅ always upload, even if tests fail
@@ -122,47 +125,3 @@ jobs:
           name: gitleaks-results
           path: .gitleaks-report.json
           retention-days: 4
-
-  # ===================================================================
-  # JOB 4: Qodana static analysis (with retry wrapper, fail only on errors)
-  # ===================================================================
-  qodana:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    steps:
-      - name: Download backend sources
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-sources
-          path: backend
-
-      # Launch Qodana inside retry wrapper to handle transient network errors
-      - name: Run Qodana Scan (JVM) with retry
-        uses: nick-invision/retry@v3
-        with:
-          max_attempts: 3              # retry up to 3 times
-          retry_wait_seconds: 30       # wait 30 seconds between retries
-          timeout_minutes: 15          # per attempt timeout
-          command: |
-            docker run --rm -v ${{ github.workspace }}:/data jetbrains/qodana-jvm:2025.1 \
-              --project-dir=backend \
-              --config=backend/qodana.yaml \
-              --results-dir /data/qodana/results \
-              --cache-dir /data/qodana/cache \
-              --timeout=300000 \
-              --fail-threshold=error   # ✅ only fail CI if errors found
-
-      - name: Upload Qodana report artifact
-        if: always()   # ✅ always upload report (even if scan failed)
-        uses: actions/upload-artifact@v4
-        with:
-          name: qodana-report
-          path: qodana/
-          if-no-files-found: warn
-          retention-days: 4
-
-      - name: Upload Qodana SARIF report to GitHub Security
-        if: always()   # ✅ always upload SARIF (even if scan failed) so we see results in Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: qodana/results/qodana.sarif.json
