--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
     // Testing support
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Swagger / OpenAPI UI
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 // ---------------- Checkstyle ----------------
