--- a/backend/src/main/resources/application-ci.yml
+++ b/backend/src/main/resources/application-ci.yml
@@ -1,28 +1,27 @@
 # =========================================================
 # application-ci.yml
-# CI/CD profile for running tests with in-memory H2 database.
-# Ensures fast, isolated tests without connecting to external DB.
+# CI/CD profile — uses in-memory H2 for isolated fast tests.
 # =========================================================
 
 server:
-  port: 0   # Use random port (not needed for tests)
+  port: 0   # Random port for test context
 
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL  # In-memory H2, MySQL compatibility
-    driver-class-name: org.h2.Driver                        # Full driver class required
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL   # H2 with MySQL compatibility mode
+    driver-class-name: org.h2.Driver
     username: sa
-    password: sa
+    password: ""
 
   jpa:
     hibernate:
-      ddl-auto: create-drop               # Fresh schema each test run
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-    show-sql: false                       # Disable SQL logging for CI runs
+    show-sql: false
 
 logging:
   level:
-    root: WARN                            # Minimal logs in CI
-    org.springframework.test: INFO        # Show test logs
+    root: WARN
+    org.springframework.test: INFO
