--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,19 +1,15 @@
 # =========================================================
 # application.yml
-# Base application configuration (fallback defaults).
-# Used when no specific Spring profile is active.
-# Should not contain any secrets; all passwords should come from ENV vars.
+# Base configuration. No profile activated by default.
+# The correct profile is chosen via SPRING_PROFILES_ACTIVE or @ActiveProfiles in tests.
 # =========================================================
 
 server:
-  port: ${SPRING_LOCAL_PORT:8080}   # Default server port if not overridden
+  port: ${SPRING_LOCAL_PORT:8080}
 
 spring:
   application:
     name: news-platform
-
-  profiles:
-    active: local  # Default profile for local development
 
 logging:
   level:
